--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <h1>COMUNIDADE GAME</h1>
-   <P>Sobre Jogos!!!</P>
+   <p class="inicio">Nos jogos, a busca por novas experiências é constante, seja explorando mundos abertos, competindo em batalhas multiplayer ou desvendando enigmas. Com a tecnologia em constante evolução, os limites do que é possível dentro dos jogos estão sempre sendo desafiados, proporcionando aos jogadores uma variedade cada vez maior de opções para se aventurar e se divertir.</p>
    <nav>
       <ul>
         <li>
-          <a href="novidades.html">+JOGOS</a>
+          <a class="menu" href="novidades.html">+JOGOS</a>
         </li>
       </ul>
    
@@ -38,6 +38,15 @@
     <p>Hogwarts Legacy é um jogo eletrônico de RPG de ação desenvolvido pela Avalanche Software e publicado pela Warner Bros. Interactive Entertainment sob o selo Portkey Games. O jogo é ambientado no final do século XIX do universo de Harry Potter, um século antes dos eventos narrados nos livros de J.K. Rowling. </p>
   </div>
 </div>
+<div id="comentarios">
+  <h2 class="comente">Comentários</h2>
+  <form id="form-comentario">
+      <textarea name="texto" placeholder="Digite seu comentário"></textarea>
+      <button type="submit">Enviar</button>
+  </form>
+  <ul id="lista-comentarios"></ul>
+</div>
+
 </body>
-<script src="jav.js"></script>
+<script src="com.js"></script>
 </html>
