--- a/novidades.html
+++ b/novidades.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <link rel="stylesheet" href="novidades.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOVIDADES</title>
+    <title>+JOGOS</title>
 </head>
 <body>
-    <h1>NOVIDADES</h1>
-    <h2>JOGOS RECEM LANÇADOS</h2>
+    <h1>+JOGOS</h1>
+    <h2>Bem-vindo à minha coleção de jogos! Aqui você encontrará uma variedade de títulos para desfrutar, desde jogos de aventura e quebra-cabeças até simulações e jogos de estratégia. Divirta-se explorando e jogando!</h2>
 <div class="novidades">
-    <div><h2>The Outlast Trials</h2>
+    <div class="container"><h2>The Outlast Trials</h2>
         <img class="tamanhoNovidades" src="assets/the outlast.avif" alt="">
         <p>The Outlast Trials é um jogo eletrônico vindouro de tiro em primeira pessoa e survival horror psicológico desenvolvido e publicado pela Red Barrels. </p>
            <p>Data de lançamento inicial: 18 de maio de 2023
@@ -21,8 +21,8 @@
            <p>Estúdio: Red Barrels Studio</p>
            <p>Gêneros: Survival horror, Jogo eletrônico independente, Jogo eletrônico de aventura</p>
         </div>
-    <div> <h2>League of Legends</h2>
-        <img class="tamanhoNovidades" src="assets/LOL.jfif" alt="">
+    <div class="container"> <h2>League of Legends</h2>
+        <img class="tamanhoNovidades" src="assets/lol2.jpg" alt="">
         <P>Data de lançamento inicial: 27 de outubro de 2009</P>
         <P>League of Legends é um jogo eletrônico do gênero multiplayer online battle arena desenvolvido e publicado pela Riot Games. Foi lançado em outubro de 2009 para Microsoft Windows e em março de 2013 para macOS.</P>
         <P>Desenvolvedor: Riot Games</P>
