--- a/cadastro.html
+++ b/cadastro.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="entrar.css">
+    <link rel="stylesheet" href="cadastro.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGIN</title>
+    <title>CADASTRAR</title>
 </head>
 <body>
     <nav>
@@ -14,15 +14,20 @@
          <li><a href="home.html">INICIO</a></li>
        </ul>
     </nav>
-    <span>COMUNIDADE<br>GAME</span>
+    
     <form method="post"">
-    <h1>ACESSE SUA CONTA</h1>
-    <img src="assets/entrar1.png">
+    <h1>CADASTRE-SE</h1>
+    <label>NOME</label>
+    <input type="text" name="nome">
+    <label>EMAIL</label>
     <input type="email" name="email" autocomplete="off">
-    <img src="assets/entrar2.png">
+    <label>SENHA</label>
     <input type="password" name="senha">
-    <input type="submit" value="ENTRAR">
-    <a href="cadastro.html">REGISTRE-SE AGORA</a>
+    <Label>CONFIRMAR SENHA</Label>
+    <input type="password" name="confsenha">
+    <input type="submit" value="cadastrar">
+    
     </form>
 </body>
+</html>
 </html>
