--- a/home.html
+++ b/home.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COMUNIDADE GAME</title>
   <link rel="stylesheet" href="style.css">
+ 
   
   </head>
 <body>
    <nav>
     <ul>
-     <li><a href="comunidade.php">COMUNIDADE</a></li>
+     <li><a href="comunidade.html">COMUNIDADE</a></li>
      <li><a href="novidades.html">+JOGOS</a></li>
      <li><a href="entrar.html">ENTRAR</a></li>
    </ul>
