--- a/novidades.html
+++ b/novidades.html
@@ -11,9 +11,9 @@
 <body>  
     <nav>
     <ul>
-     <li><a href="comunidade.html">COMUNIDADE</a></li>
+     <li><a href="comunidade.php">COMUNIDADE</a></li>
      <li><a href="HOME.html">INICIO</a></li>
-     <li><a href="entrar.html">ENTRAR</a></li>
+     <li><a href="entrar.php">ENTRAR</a></li>
    </ul>
    </nav>
    <h1>+JOGOS</h1>
