--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
 <body>
    <nav>
     <ul>
-     <li><a href="comunidade.html">COMUNIDADE</a></li>
+     <li><a href="comunidade.php">COMUNIDADE</a></li>
      <li><a href="novidades.html">+JOGOS</a></li>
-     <li><a href="entrar.html">ENTRAR</a></li>
+     <li><a href="entrar.php">ENTRAR</a></li>
    </ul>
 </nav>
 
@@ -24,6 +24,8 @@
 </div>
 
 
+
 </body>
+
 
 </html>
