que deus me ajude

--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COMUNIDADE GAME</title>
   <link rel="stylesheet" href="style.css">
- 
+  <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
+  
   
   </head>
 <body>
@@ -22,6 +23,13 @@
 <img src="assets/inicio0.jpg" alt="">
 <h3>Jogos são mais do que diversão; são uma forma de arte interativa que desafia, inspira e conecta. Desde os primórdios da humanidade até os avanços tecnológicos modernos, os jogos têm sido parte fundamental da cultura. Eles oferecem experiências imersivas que transportam os jogadores para novos mundos, desafiam habilidades e promovem aprendizado. Com uma variedade de gêneros e estilos, os jogos continuam a evoluir e influenciar a forma como nos divertimos e interagimos.</h3>
 </div>
+<div >
+<img class="i" src="assets/inicio.webp" alt="">
+
+<p>SEJA BEM VINDO!!!</p>
+
+</div>
+
 
 
 
