--- a/novidades.html
+++ b/novidades.html
@@ -69,6 +69,68 @@
                     <p>Plataformas: Android, iOS</p>
                     <p>Modos de jogo: Multijogador</p>
                     <p>Motor: Unity 3D</p>
+                    <div>
+                    <h2>Terraria</h2>
+                    <img class="t" src="assets/terraria.jpg" alt="">
+                    <p>Terraria é um jogo eletrônico RPG de ação-aventura independente produzido pela desenvolvedora de jogos Re-Logic. Possui como características a exploração, artesanato, construção de estruturas e combate a monstros perigosos em um mundo 2D gerado de forma procedural.</p>
+                    <p>Plataformas: Android, Nintendo Switch, PlayStation 4, iOS, MAIS</p>
+                    <p>Estúdios: Re-Logic, AK Tronic, 505 Games, Chunsoft</p>
+                    <p>Desenvolvedores: Re-Logic, Pipeworks Studio, Engine Software, Codeglue, 505 Mobile S.r.l</p>
+                    <p>Gêneros: Jogo eletrônico de ação e aventura, Jogabilidade não linear</p>
+                    <p>Artista(s): Jamison "Lazure" Hayes; Andrew "Redigit" Spinks; Victor "Crowno" Moura; Jim Tommy Myhre Kjexrud</p>
+                </div> 
+                <div>
+                    <h2>Starbound</h2>
+                    <img class="t" src="assets/starbund.webp" alt=""> 
+                    <p>Starbound é um jogo de ação e aventura desenvolvido e publicado pela Chucklefish. Starbound ocorre em um universo bidimensional gerado processualmente onde o jogador é capaz de explorar para obter novas armas, armaduras e itens, e para visitar cidades e vilas habitadas por várias formas de vida inteligente.</p>
+                    <p>Desenvolvedor: Chucklefish </p>
+                    <p>Estúdio: Chucklefish Ltd</p>
+                    <p>Data de lançamento inicial: 22 de julho de 2016</p>
+                    <p>Gêneros: Sandbox, Jogo eletrônico independente, MAIS</p>
+                    <p>Projetista: Finn Brice</p>
+                    <p>Plataformas: Microsoft Windows, Linux, macOS, GeForce Now, Xbox One, Mac OS</p>
+                </div> 
+                <div>
+                    <h2>Cyberpunk 2077</h2>
+                    <img class="t" src="assets/cyberpunk.jpg" alt="">
+                    <p>Cyberpunk 2077 é um jogo eletrônico de RPG de ação desenvolvido pela CD Projekt Red e publicado pela CD Projekt. A história do jogo é ambientada em Night City, um mundo aberto situado no universo fictício de Cyberpunk.</p>
+                    <p>Plataformas: PlayStation 5, PlayStation 4, Xbox Series X e Series S, Xbox One, GeForce Now, Microsoft Windows</p>
+                    <p>Desenvolvedores: CD Projekt RED, CD Projekt, CD Projekt Sp. z o.o</p>
+                    <p>Gêneros: RPG eletrônico, Jogo eletrônico de tiro, Jogo eletrônico de luta, Jogo eletrônico de ação e aventura</p>
+                    <p>Data de lançamento inicial: 10 de dezembro de 2020</p>
+                    <p>Projetista: Konrad Tomaszkiewicz</p>
+
+                </div>
+                <div>
+                    <h2>Hogwarts Legacy </h2>
+                    <img class="t" src="assets/how.jpeg" alt="">
+                    <p>Hogwarts Legacy é um game de ação imersivo ambientado no mundo dos livros do Harry Potter, escritos por J.K. Rowling. O jogador embarca em uma jornada por locais novos e familiares, enquanto explora ambientes com gráficos deslumbrantes, podendo ter a chance de descobrir e encontrar incríveis animais e seres fantásticos. O jogo vem com a incrível novidade de personalizar os personagens, com características, gênero, voz, escolher e customizar a varinha ideal, dependendo da criatividade dos jogadores, e ainda, terão a chance de escolher uma das famosas casas de Hogwarts (Grifinória, Lufa-Lufa, Corvinal e Sonserina), podendo aprender e manipular feitiços, elevar habilidades e criar poções. Após alguns anos de atrasos e complicações, o game foi lançado em 10 de fevereiro de 2023 e duas semanas após seu lançamento, o jogo vendeu cerca de 12 milhões de cópias.</p>
+                </div>  
+                <div>
+                    <h2>Mighty Morphin Power Rangers (Super Nintendo)</h2>
+                    <img class="t" src="assets/1.jpeg" alt="">
+                    <p>Mighty Morphin Power Rangers (Super Nintendo) é um jogo de ação de rolagem lateral, onde o jogador embarca em uma jornada podendo escolher um dos 5 rangers (Jason, Billy, Zack, Trini e Kimberly), a cada segmento, derrotando os patrulheiros de massa e monstros (Boss) para salvar a cidade das ameaças da bruxa espacial Rita Repulsa. Usando o botão de seleção, o jogador desbloqueia a arma exclusiva de cada ranger, mas drena a saúde a cada uso, e nos segmentos finais, os jogadores ainda tem a chance de lutar com o Megazord contra os vilões finais do game. O jogo foi lançado em várias plataformas em novembro de 1994 e muitos elogiaram o design simples com o estilo semelhante ao programa de TV, movimentação e controles dinâmicos, e a atenção ao tornar cada personagem único, com movimentos e armas de cada um dos personagens.</p>
+                </div>
+                <div>
+                    <h2>Street Fighter 2</h2>
+                    <img class="t" src="assets/2.jpeg" alt="">
+                    <p>Street Fighter 2 é um jogo de luta, podendo jogar sozinho ou em dupla, desenvolvido pela Capcom e lançado em várias plataformas de Arcade em 1991. E o jogo, em relação ao primeiro, melhorou vários dos conceitos introduzidos, incluindo o uso de golpes especiais usando comandos de Joystick com seis botões, enquanto ofereceu aos jogadores uma seleção de vários personagens jogáveis, como o Ryu, Chun-li, Guile, Bison, e dentre vários outros personagens icônicos, tendo, cada um, o seu próprio estilo de luta, com introduções ao sistema de Combos. Em 1994, o jogo tinha sido jogado por mais de 25 milhões de pessoas somente nos Estados Unidos, e mais de 15 milhões de unidades de Software foram vendidos para todo o mundo. Street Fighter 2 é reconhecido como um dos melhores jogos eletrônicos dos anos 90 e de sempre, tanto que é considerado como um dos mais importantes jogos de luta já criado, tendo sido um marco incrível para a cultura pop em geral.</p>
+                </div>
+                <div>
+                    <h2>Amor Doce</h2>
+                    <img class="t" src="assets/castiel.webp" alt="">
+                    <p>Criado por ChinoMiKo, Amor Doce surgiu em meados de 2011.
+                       	Este Otome Game teve origem francesa, e seu nome original é “Amour Sucrè”.
+                        A empresa responsável pela distribuição do jogo, assim como outras da mesma franquia, é a Beemoov.
+                        AD está disponível para todas as plataformas, como: Android, iOS e, ainda, navegador da web.</p>
+                    <p>Desenvolvedor: Beemoov</p>
+                    <p>Gêneros: Otome game, Simulador de romance, Jogo eletrônico de aventura, Jogo de simulação</p>
+                    <p>Data de lançamento inicial: 16 de março de 2011</p>
+                    <p>Estúdio: Beemoov</p>
+                    <p>Plataformas: Navegador web, Microsoft Windows</p>
+
+                </div>              
+
                 </div>
                 
 
