--- a/cadastro.html
+++ b/cadastro.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CADASTRAR</title>
+    <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
 </head>
 <body>
     <nav>
         <ul>
-         <li><a href="comunidade.php">COMUNIDADE</a></li>
+         <li><a href="comunidade.html">COMUNIDADE</a></li>
          <li><a href="novidades.html">+JOGOS</a></li>
          <li><a href="home.html">INICIO</a></li>
        </ul>
@@ -27,5 +28,6 @@
     <input type="password" name="confsenha" id= "confsenha">
     <input type="submit" value="cadastrar">
     </form>
+<script src="com.js"></script>
 </body>
 </html>
