--- a/comunidade.html
+++ b/comunidade.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMUNIDADE</title>
     <link rel="stylesheet" href="comunidade.css">
+    <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
     
 
 </head>
