--- a/entrar.html
+++ b/entrar.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
+    <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
 </head>
 <body>
 <!DOCTYPE html>
