--- a/novidades.html
+++ b/novidades.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>+JOGOS</title>
+    <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
 </head>
 
 <body>  
