--- a/comunidade.html
+++ b/comunidade.html
@@ -21,7 +21,7 @@
 <body>
     <nav>
         <ul>
-         <li><a href="entrar.php">ENTRAR</a></li>
+         <li><a href="entrar.html">ENTRAR</a></li>
          <li><a href="novidades.html">+JOGOS</a></li>
          <li><a href="home.html">INICIO</a></li>
        </ul>
