--- a/entrar.html
+++ b/entrar.html
@@ -19,7 +19,7 @@
 <body>
     <nav>
         <ul>
-         <li><a href="comunidade.php">COMUNIDADE</a></li>
+         <li><a href="comunidade.html">COMUNIDADE</a></li>
          <li><a href="novidades.html">+JOGOS</a></li>
          <li><a href="home.html">INICIO</a></li>
        </ul>
@@ -32,7 +32,7 @@
     <img src="assets/entrar2.png">
     <input type="password" name="senha">
     <input type="submit" value="ENTRAR">
-    <a href="cadastro.php">REGISTRE-SE AGORA</a>
+    <a href="cadastro.html">REGISTRE-SE AGORA</a>
     </form>
     
 </body>
