--- a/cadastro.html
+++ b/cadastro.html
@@ -16,7 +16,7 @@
        </ul>
     </nav>
     
-    <form method="post"">
+    <form method="post">
     <h1>CADASTRE-SE</h1>
     <label for="nome">NOME</label>
     <input type="text" name="nome" id="nome">
