--- a/home.html
+++ b/home.html
@@ -12,9 +12,9 @@
 <body>
    <nav>
     <ul>
-     <li><a href="comunidade.php">COMUNIDADE</a></li>
+     <li><a href="comunidade.html">COMUNIDADE</a></li>
      <li><a href="novidades.html">+JOGOS</a></li>
-     <li><a href="entrar.php">ENTRAR</a></li>
+     <li><a href="entrar.html">ENTRAR</a></li>
    </ul>
 </nav>
 
